--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ word-wrap:break-word'>
   Information Science</a> from 2014 to 2019, and is currently an Associate Professor
   at the Faculty of Science and Technology of the University of Macau. He has
   investigated several funded research projects as PI and has
-  authored/co-authored more than 200 refereed scientific papers in
+  authored/co-authored more than 200 refereed papers in
   international journals (including T-PAMI, T-IFS, T-IP, T-DSC and T-KDE) and
   conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
   as the General Chair for the 10th &amp;11th International Conference Computer
