--- a/research.html
+++ b/research.html
@@ -225,8 +225,8 @@ span.staffsectionsubheading1 {
           <ol start=1 type=1>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Dong,</span></strong><span
        lang=EN-US style='"Times New Roman"'> <strong>C.-M.
-              Pun</strong> and Z. Zhang, “Kinship Verification Based on
-              Cross-Generation Feature Interaction Learning,” <i>IEEE Transactions on
+              Pun</strong> and Z. Zhang, "Kinship Verification Based on
+              Cross-Generation Feature Interaction Learning,"&nbsp; <i>IEEE Transactions on
               Image Processing (TIP)</i>, 30, pp. 7391-7403<strong><span
        style='font-weight:normal'>, 2021. (JCR Q1, CCF A)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Dong,</span></strong><span
