--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ span.staffsectionsubheading1 {
        normal'>, WK Ling, L. Cheng, "Rapid facial expression recognition under
               part occlusion based on symmetric SURF and heterogeneous soft partition
               network," <i>Multimedia Tools and Applications</i>, 79(8), pp.
-              30861–30881, 2020. (JCR Q2)</span></strong></li>
+              30861-30881, 2020. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>D. Zhou, G. Huang, J. Li, S. Zhu,
               Z. Wang, BWK Ling, </span></strong><strong><span lang=EN-US
        style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
@@ -340,7 +340,7 @@ span.staffsectionsubheading1 {
               Multi-Scale Feature Fusion," </span></strong><i><span lang=EN-US
        style='"Times New Roman"'>IEEE Access, </span></i><span
        lang=EN-US style='"Times New Roman"'>8(7)<strong><span
-       style='font-weight:normal'>, pp. 132514 – 132526, 2020. (JCR Q1)</span></strong></span></li>
+       style='font-weight:normal'>, pp. 132514 -132526, 2020. (JCR Q1)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>F Chen, G Huang, J Lan, Y Wu, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
@@ -363,7 +363,7 @@ span.staffsectionsubheading1 {
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'>, "Revisiting </span></strong><span class=SpellE><span
-       class=spelle><span lang=EN-US style='"Times New Roman"'>Nyström</span></span></span><strong><span
+       class=spelle><span lang=EN-US style='"Times New Roman"'>Nystrom</span></span></span><strong><span
        lang=EN-US style='font-weight:
        normal'> extension for hypergraph clustering,"<i> Neurocomputing</i>,
               403(8), pp. 247-256, 2020. (JCR Q1)</span></strong></li>
@@ -419,7 +419,7 @@ span.staffsectionsubheading1 {
               Superpixel-based Hyperspectral Image Classification Using Recurrent
               Neural Networks with Stacked Autoencoders," <i>IEEE Transactions on
               Multimedia (TMM)</i>, 22(2)<strong><span style='font-weight:normal'>,
-              pp. 487 – 501, 2020. (JCR Q1, CCF B)</span></strong></span></li>
+              pp. 487 -501, 2020. (JCR Q1, CCF B)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Zhong and </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
@@ -481,7 +481,7 @@ span.staffsectionsubheading1 {
        normal'>, Y. Liu, X. Lai, Z. Yang and H. Gao, "An artificial bee
               algorithm with a leading group and its application into image
               registration," <i>Multimedia Tools and Applications</i>, 79, pp.
-              14643–14669, 2020. (JCR Q2)</span></strong></li>
+              14643-14669, 2020. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>D. Wu, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
@@ -490,21 +490,21 @@ span.staffsectionsubheading1 {
        lang=EN-US style='font-weight:
        normal'> and Z. Wu, "Vehicle power train optimization using
               multi-objective bird swarm algorithm," <i>Multimedia Tools and
-              Applications</i>, 79, pp.14319–14339, 2020. (JCR Q2)</span></strong></li>
+              Applications</i>, 79, pp.14319-14339, 2020. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>H. Gao, H. Li, Y. Liu, H. Lu, H. </span></strong><span
        class=GramE><span class=grame><span lang=EN-US style='"Times New Roman"'>Kim</span></span></span><strong><span lang=EN-US
        style='font-weight:normal'> and </span></strong><strong><span lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span lang=EN-US
        style='font-weight:normal'>,
               "High-quality-guided artificial bee colony algorithm for designing
               loudspeaker," <i>Neural Computing and Applications</i>, 32,
-              pp.4473–4480, 2020. (JCR Q1)</span></strong></li>
+              pp.4473-4480, 2020. (JCR Q1)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>Z. Fu, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'> and H. Gao, "Endmember extraction of hyperspectral remote
               sensing images based on an improved discrete artificial bee colony
               algorithm and genetic algorithm," <i>Mobile networks &amp; applications</i>,
-              25, pp.1033–1041, 2020. (JCR Q2)</span></strong></li>
+              25, pp.1033-1041, 2020. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>J.-C. Xie</span></strong><span
        lang=EN-US style='"Times New Roman"'> and<strong><span
        style='font-weight:normal'> </span>C.-M. Pun</strong>, "Chronological
@@ -552,7 +552,7 @@ span.staffsectionsubheading1 {
        class=SpellE><span class=spelle><span lang=EN-US style='"Times New Roman"'>keypoint</span></span></span><strong><span
        lang=EN-US style='font-weight:
        normal'> filtering and iterative region merging," <i>Multimedia Tools
-              and Applications</i>, 78(18), pp. 26313–26339, 2019. (JCR Q2)</span></strong></li>
+              and Applications</i>, 78(18), pp. 26313-26339, 2019. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>X. Cun, F. Xu, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
@@ -588,7 +588,7 @@ span.staffsectionsubheading1 {
        lang=EN-US style='font-weight:
        normal'>, "On-line video multi-object segmentation based on skeleton
               model and occlusion detection," <i>Multimedia Tools and Applications</i>,
-              77(23), pp. 31313–31329, 2018. (JCR Q2)</span></strong></li>
+              77(23), pp. 31313-31329, 2018. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>B. Liu and </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
@@ -627,18 +627,18 @@ span.staffsectionsubheading1 {
        lang=EN-US style='"Times New Roman"'> <strong><span
        style='font-weight:normal'>and X.-C. Yuan, "Robust image hashing using
               progressive feature selection for tampering detection," <i>Multimedia
-              Tools and Applications</i>, 77(10), pp. 11609–11633, 2018. (JCR Q2)</span></strong></span></li>
+              Tools and Applications</i>, 77(10), pp. 11609-11633, 2018. (JCR Q2)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>P. Qin and </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'>, "Object tracking using distribution fields with correlation
               coefficients," <i>Multimedia Tools and Applications</i>, 77(7), pp.
-              8979–9002, 2018. (JCR Q2)</span></strong></li>
+              8979-9002, 2018. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>X.-L. Bi,<strong> C.-M. Pun </strong>and X.-C. Yuan,
               "Multi-Scale Feature Extraction and Adaptive Matching for Copy-Move
               Forgery Detection," <strong><i><span style='font-weight:normal'>Multimedia
               Tools and Applications</span></i></strong><strong><span
-       style='font-weight:normal'>, 77(1), </span></strong>pp. 363–385, <strong><span
+       style='font-weight:normal'>, 77(1), </span></strong>pp. 363-385, <strong><span
        style='font-weight:normal'>2018. (JCR Q2)&nbsp;&nbsp;&nbsp; </span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>J. Du, C. M. </span></strong><span
        class=SpellE><span class=spelle><span lang=EN-US style='"Times New Roman"'>Vong</span></span></span><strong><span lang=EN-US
@@ -687,28 +687,28 @@ span.staffsectionsubheading1 {
               "Weighted Joint Sparse Representation for Removing Mixed Noise in Image," <i>IEEE Transactions on Cybernetics (</i></span></strong><span
        class=SpellE><span class=spelle><i><span lang=EN-US style='"Times New Roman"'>TCyber</span></i></span></span><strong><i><span
        lang=EN-US style='font-weight:
-       normal'>)</span></i></strong><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>, 47(3), pp. 600 – 611,
+       normal'>)</span></i></strong><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>, 47(3), pp. 600 - 611,
               2017.&nbsp; (JCR Q1, CCF B)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>C. Lin, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'> and G. Huang, "Highly non-rigid video object tracking using
               segment-based object candidates," <i>Multimedia Tools and Applications</i>,
-              76(7), pp. 9565–9586, 2017. (JCR Q2)</span></strong></li>
+              76(7), pp. 9565-9586, 2017. (JCR Q2)</span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>C. Lin, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun,</span></strong><span
        lang=EN-US style='"Times New Roman"'> C.-M. <span
        class=SpellE><span class=spelle>Vong</span></span> and D. <span
        class=SpellE><span class=spelle>Adjeroh</span></span>, "Efficient shape
               classification using region descriptors," <i>Multimedia Tools and
-              Applications</i>, 76(1), pp. 83–102, 2017. <strong><span
+              Applications</i>, 76(1), pp. 83-102, 2017. <strong><span
        style='font-weight:normal'>(JCR Q2)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Huang, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'>, and C. Lin, "Unsupervised video co-segmentation based on
               superpixel co-saliency and region merging," <i>Multimedia Tools and
-              Applications</i>, </span></strong><span lang=EN-US style='"Times New Roman"'>76(10), pp. 12941–12964<strong><span
+              Applications</i>, </span></strong><span lang=EN-US style='"Times New Roman"'>76(10), pp. 12941-12964<strong><span
        style='font-weight:normal'>, 2017. (JCR Q2)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>C.-P. Yan, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><span
@@ -737,14 +737,14 @@ span.staffsectionsubheading1 {
               object segmentation using illumination-invariant color-texture feature
               extraction and marker prediction," <i>Journal of Visual Communication
               and Image Representation, </i>vol. 41,<strong><span style='font-weight:
-       normal'> pp.</span></strong> <strong><span style='font-weight:normal'>391–405,
+       normal'> pp.</span></strong> <strong><span style='font-weight:normal'>391-405,
               2016. (JCR Q2)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>K.-C. Choi and </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'>, "Robust lossless digital watermarking using integer transform
               with Bit plane manipulation," <i>Multimedia Tools and Applications</i>,
-              75(11), pp. 6621–6645, 2016. (JCR Q2) </span></strong></li>
+              75(11), pp. 6621-6645, 2016. (JCR Q2) </span></strong></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman"'>C.-M. Pun </span></strong><span lang=EN-US
        style='"Times New Roman"'>and C. Lin, "A
               real-time detector for parked vehicles based on hybrid background modeling," <i>Journal of Visual Communication and Image Representation, </i>vol.
@@ -752,7 +752,7 @@ span.staffsectionsubheading1 {
        style='font-weight:normal'>82-92, 2016. (JCR Q2)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>X.-L. Bi,<strong> C.-M. Pun </strong>and X.-C. Yuan,
               "Multi-Level Dense Descriptor and Hierarchical Feature Matching for
-              Copy–Move Forgery Detection," <strong><i><span style='font-weight:normal'>Information
+              Copy-Move Forgery Detection," <strong><i><span style='font-weight:normal'>Information
               Sciences</span></i></strong><strong><span style='font-weight:normal'>,
               vol. 345, pp. 226-242, 2016. (JCR Q1, CCF B)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman"'>C.-M. Pun, </span></strong><span lang=EN-US
@@ -843,25 +843,25 @@ span.staffsectionsubheading1 {
        style='"Times New Roman"'>and X.-C. Yuan,
               "Robust Segments Detector for De-Synchronization Resilient Audio
               Watermarking," <i>IEEE Transactions on Audio, Speech, and Language
-              Processing (TASLP)</i>, 21(11), pp. 2412 – 2424, 2013.&nbsp; <strong><span
+              Processing (TASLP)</i>, 21(11), pp. 2412 - 2424, 2013.&nbsp; <strong><span
        style='font-weight:normal'>(JCR Q1, CCF B)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>X.-C. Yuan, C<strong>.-M. Pun </strong>and C. L.
               Philip Chen, "Geometric invariant watermarking by local Zernike moments
               of binary image patches," Signal<i> Processing</i>, 93(7), pp.
-              2087–2095, 2013.&nbsp; <strong><span style='font-weight:normal'>(JCR Q1)</span></strong></span></li>
+              2087-2095, 2013.&nbsp; <strong><span style='font-weight:normal'>(JCR Q1)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>W. Feng, Z.-Q. Liu, L. Wan, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun </span></strong><span
        lang=EN-US style='"Times New Roman"'>and<strong><span
        style='font-weight:normal'> J. Jiang, "A spectral-multiplicity-tolerant
               approach to robust graph matching," <i>Pattern Recognition</i>, 46(10),
-              pp. 2819–2829, 2013. (JCR Q1, CCF B)</span></strong></span></li>
+              pp. 2819-2829, 2013. (JCR Q1, CCF B)</span></strong></span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>D. Liu, M.-C. Lee, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun </span></strong><span
        lang=EN-US style='"Times New Roman"'>and<strong><span
        style='font-weight:normal'> H. Liu, "Analysis of Wireless Localization
               in </span></strong><span class=SpellE><span class=spelle>Nonline</span></span><strong><span
        style='font-weight:normal'>-of-Sight Conditions," <i>IEEE Transactions
-              on Vehicular Technology (TVT)</i>, 62(4), pp. 1484 – 1492, 2013. (JCR
+              on Vehicular Technology (TVT)</i>, 62(4), pp. 1484 - 1492, 2013. (JCR
               Q1) </span></strong>&nbsp;</span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>M. Cheng, B. Fang, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun </span></strong><span
@@ -1074,7 +1074,7 @@ span.staffsectionsubheading1 {
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
        normal'> and H. Gao, "Depth Assisted Full Resolution Network for Single
-              Image-Based View Synthesis," </span></strong><i><span lang=EN-US
+            Image-Based View Synthesis," </span></strong><i><span lang=EN-US
        style='"Times New Roman"'>Proceedings of <strong><span
        style='font-weight:normal'>ACM SIGGRAPH 2018 Posters</span></strong></span></i><strong><span
        lang=EN-US style='font-weight:
@@ -1148,7 +1148,7 @@ span.staffsectionsubheading1 {
        lang=EN-US style='font-weight:
        normal'> and X.-C. Yuan</span></strong><span lang=EN-US
        style='"Times New Roman"'>, "Adaptive local
-              feature based multi-scale image hashing for robust tampering detection," <i>Proceedings of the TENCON</i>, 2015.</span></li>
+            feature based multi-scale image hashing for robust tampering detection," <i>Proceedings of the TENCON</i>, 2015.</span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Huang, </span></strong><strong><span
        lang=EN-US style='"Times New Roman"'>C.-M. Pun</span></strong><strong><span
        lang=EN-US style='font-weight:
