--- a/research.html
+++ b/research.html
@@ -897,8 +897,9 @@ span.staffsectionsubheading1 {
               Information Science and Technology</em>, 54(1), pp. 68-80, 2003.&nbsp; <strong><span
        style='font-weight:normal'>(JCR Q1, CCF B)</span></strong></span></li>
           </ol>
+          <p style="text-align:justify;text-justify:inter-ideograph">&nbsp;</p>
           <p style="text-align:justify;text-justify:inter-ideograph"><b><span lang="EN-US" style="font-size:14.0pt">Conferences </span></b></p>
-          <ol start=100 type=1>
+<ol start=100 type=1>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>G. Zhong <strong><span style='font-weight:normal'>and </span>C.-M. Pun</strong><strong><span style='font-weight:normal'>, "</span></strong>Latent
               Low-rank Graph Learning for Multimodal Clustering," <i>Proceedings of
               the 37th IEEE International Conference on Data Engineering (ICDE)</i><strong><span
