--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ span.FooterChar {
 <body bgcolor=white lang=ZH-TW link=blue vlink=purple>
 <div class=WordSection1>
   <div align=center>
-    <table border=0 cellspacing=4 cellpadding=0 width=924>
+    <table border=0 cellspacing=4 cellpadding=0 width=928>
       <tr>
         <td width=539><p><strong><span lang=EN-US style='font-size:20.0pt'>PUN, Chi Man </span></strong><span
   lang=EN-US style='font-family:"Arial",sans-serif;'><img
-  width=86 height=20 id="_x0000_i1089" src=pcm.gif alt="Chinese Name"></span><span
+  width=86 height=20 src=pcm.gif alt="Chinese Name"></span><span
   lang=EN-US style='font-family:"Arial",sans-serif'><br>
             B.Sc., M.Sc., Ph.D.</span></p>
           <p><em><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>Professor</span></em><span
@@ -71,22 +71,22 @@ span.FooterChar {
             <br>
             </span></u></span></p></td>
         <td width=63>&nbsp;</td>
-        <td width=314><p><span lang=EN-US><img width=312 height=356
-  src="JP21.jpg" v:shapes="Picture_x0020_15"></span></p></td>
+        <td><p><span lang=EN-US><img width=312 height=356
+  src="JP21.jpg" align=right></span></p></td>
       </tr>
       <tr>
-        <td width=920 colspan=3><div align=center style='text-align:center'><span lang=EN-US
+        <td colspan=3><div align=center style='text-align:center'><span lang=EN-US
   style='font-size:10.0pt;'>
             <hr size=1 width="100%" align=center>
             </span></div>
           <p style='text-align:justify;text-justify:inter-ideograph'><span lang=EN-US
   style='font-size:14.0pt'>Prof. Pun received his B.Sc. and M.Sc. degrees in
-            Software Engineering from the <a href="http://www.umac.mo/" target="_self">University
+            Software Engineering from the <a href="https://www.um.edu.mo/" target="_self">University
             of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a
-  href="http://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
-            Engineering</a> from the <a href="http://www.cuhk.hk/" target="_self">Chinese
+  href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
+            Engineering</a> from the <a href="https://www.cuhk.edu.hk/" target="_self">Chinese
             University of Hong Kong</a> in 2002. He was the Head of the <a
-  href="http://www.cis.umac.mo" target="_self">Department of Computer and
+  href="https://www.cis.umac.mo" target="_self">Department of Computer and
             Information Science</a> from 2014 to 2019. Dr. Pun is currently a Professor
             of Computer and Information Science and in charge of the Image Processing and
             Pattern Recognition Laboratory at the Faculty of Science and Technology of
@@ -96,8 +96,8 @@ span.FooterChar {
             conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
             as the General Chair for the 10th &amp;11th International Conference Computer
             Graphics, Imaging and Visualization (<a
-  href="http://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>, <a
-  href="http://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>), the 13th IEEE
+  href="https://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>, <a
+  href="https://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>), the 13th IEEE
             International Conference on e-Business Engineering (<a
   href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>),
             and the General Co-Chair for the IEEE International Conference on Visual
@@ -116,20 +116,15 @@ span.FooterChar {
   class=SpellE>PostDoc</span>/RA positions are available for application. </span></p></td>
       </tr>
       <tr>
-        <td width=920 colspan=3><div align=center style='text-align:center'><span lang=EN-US
+        <td colspan=3><div align=center style='text-align:center'><span lang=EN-US
   style='font-size:10.0pt;'>
             <hr size=1 width="100%" align=center>
             </span></div>
-          <p align=right style='text-align:right'><a href="http://www.fst.umac.mo/"
+          <p align=right style='text-align:right'><a href="https://www.fst.um.edu.mo/"
   target="&quot;_blank&quot;"><img border=0 width=50 height=58
-  src="FST%20Logo.jpg" align=right title="" v:shapes="Picture_x0020_2"></a><a href="http://www.umac.mo/"
+  src="FST%20Logo.jpg" align=right title="" v:shapes="Picture_x0020_2"></a><a href="https://www.um.edu.mo/"
   target="&quot;_blank&quot;"><img border=0 width=234 height=60
   src="UM_logo.gif" align=right title="" v:shapes="Picture_x0020_3"></a></p></td>
-      </tr>
-      <tr>
-        <td width=539></td>
-        <td width=63></td>
-        <td width=314></td>
       </tr>
     </table>
   </div>
