--- a/research.html
+++ b/research.html
@@ -144,9 +144,9 @@ span.staffsectionsubheading1 {
 <body bgcolor=white lang=ZH-TW link=blue vlink=purple>
 <div class=WordSection1>
   <div align=center>
-    <table border=0 cellspacing=4 cellpadding=0 width=924>
+    <table border=0 cellspacing=4 cellpadding=0 width=928>
       <tr>
-        <td width=920 colspan=3><div align=center style='text-align:center'><span lang=EN-US
+        <td><div align=center style='text-align:center'><span lang=EN-US
   style='font-size:11.0pt;"Times New Roman"'>
             <hr size=1 width="100%" align=center>
             </span></div>
@@ -899,7 +899,7 @@ span.staffsectionsubheading1 {
           </ol>
           <p style="text-align:justify;text-justify:inter-ideograph">&nbsp;</p>
           <p style="text-align:justify;text-justify:inter-ideograph"><b><span lang="EN-US" style="font-size:14.0pt">Conferences </span></b></p>
-<ol start=100 type=1>
+<ol start=1 type=1>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>G. Zhong <strong><span style='font-weight:normal'>and </span>C.-M. Pun</strong><strong><span style='font-weight:normal'>, "</span></strong>Latent
               Low-rank Graph Learning for Multimodal Clustering," <i>Proceedings of
               the 37th IEEE International Conference on Data Engineering (ICDE)</i><strong><span
@@ -1321,25 +1321,17 @@ span.staffsectionsubheading1 {
           </ol></td>
       </tr>
       <tr>
-        <td width=920 colspan=3><div align=center style='text-align:center'><span lang=EN-US
+        <td><div align=center style='text-align:center'><span lang=EN-US
   style='font-size:11.0pt;"Times New Roman"'>
             <hr size=1 width="100%" align=center>
             </span></div>
-          <p align=right style='text-align:right'><span lang=EN-US><a
-  href="http://www.fst.umac.mo/"></a></span><a href="http://www.fst.umac.mo/"
-  target="&quot;&quot;_blank&quot;&quot;"><img border=0 width=50 height=58
-  src="FST%20Logo.jpg" align=right title="" v:shapes="Picture_x0020_2"></a><span
-  lang=EN-US><a href="http://www.fst.umac.mo/"></a><a
-  href="http://www.umac.mo/"></a></span><a href="http://www.umac.mo/"
-  target="&quot;&quot;_blank&quot;&quot;"><img border=0 width=234 height=60
-  src="UM_logo.gif" align=right title="" v:shapes="Picture_x0020_3"></a><span
-  lang=EN-US><a href="http://www.umac.mo/"></a></span></p></td>
+          <p align=right style='text-align:right'><a href="https://www.fst.um.edu.mo/"
+  target="&quot;_blank&quot;"><img border=0 width=50 height=58
+  src="FST%20Logo.jpg" align=right title="" v:shapes="Picture_x0020_2"></a><a href="https://www.um.edu.mo/"
+  target="&quot;_blank&quot;"><img border=0 width=234 height=60
+  src="UM_logo.gif" align=right title="" v:shapes="Picture_x0020_3"></a></p></td>
       </tr>
-      <tr>
-        <td width=615></td>
-        <td width=77></td>
-        <td width=224></td>
-      </tr>
+
     </table>
   </div>
 </div>
