--- a/index.html
+++ b/index.html
@@ -79,30 +79,24 @@ span.FooterChar {
   style='font-size:10.0pt;'>
             <hr size=1 width="100%" align=center>
             </span></div>
-          <p style='text-align:justify;text-justify:inter-ideograph'><span lang=EN-US
-  style='font-size:14.0pt'>Prof. Pun received his B.Sc. and M.Sc. degrees in
+          <p style='text-align:justify;text-justify:inter-ideograph'><span lang="EN-US" style="font-size:14.0pt">Prof. Pun received his B.Sc. and M.Sc. degrees in
             Software Engineering from the <a href="https://www.um.edu.mo/" target="_self">University
-            of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a
-  href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
+            of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
             Engineering</a> from the <a href="https://www.cuhk.edu.hk/" target="_self">Chinese
-            University of Hong Kong</a> in 2002. He was the Head of the <a
-  href="https://www.cis.umac.mo" target="_self">Department of Computer and
+            University of Hong Kong</a> in 2002. He was the Head of the <a href="https://www.cis.umac.mo" target="_self">Department of Computer and
             Information Science</a> from 2014 to 2019. Dr. Pun is currently a Professor
             of Computer and Information Science and in charge of the Image Processing and
             Pattern Recognition Laboratory at the Faculty of Science and Technology of
             the University of Macau. He has investigated many externally funded research
-            projects as PI and has authored/co-authored more than 200 refereed papers in
+            projects as PI, and has authored/co-authored more than 200 refereed papers in
             top-tier journals (including T-PAMI, T-IFS, T-IP, T-DSC, and T-KDE) and
             conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
             as the General Chair for the 10th &amp;11th International Conference Computer
-            Graphics, Imaging and Visualization (<a
-  href="https://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>, <a
-  href="https://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>), the 13th IEEE
-            International Conference on e-Business Engineering (<a
-  href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>),
+            Graphics, Imaging and Visualization (<a href="https://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>, <a href="https://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>), the 13th IEEE
+            International Conference on e-Business Engineering (<a href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>),
             and the General Co-Chair for the IEEE International Conference on Visual
-            Communications and Image Processing (<a href="http://www.vcip2020.org/">VCIP2020</a>),
-            and PC Chair/Member for several other international conferences. His research
+            Communications and Image Processing (<a href="http://www.vcip2020.org/">VCIP2020</a>) and the International Workshop on Advanced Image Technology (<a href="https://iwait.online/">IWAIT2022</a>),
+            and the Program/Local Chair for several other international conferences. He has also served as the SPC/PC member for many top CS conferences such as AAAI, CVPR, ICCV, etc. His research
             interests include Image Processing and Pattern Recognition; Information
             Security and Forensic for Multimedia; Adversarial Machine Learning and AI Security,
             etc. He is also a senior member of the IEEE.</span></p>
@@ -112,8 +106,8 @@ span.FooterChar {
           <p><span lang=EN-US style='font-size:14.0pt'>More publications can be found
             in his <a href="https://scholar.google.com/citations?user=JTkP_EAAAAAJ">Google
             Scholar</a> and <a href="https://orcid.org/0000-0003-1788-3746">ORCID</a> webpages.</span></p>
-          <p><span lang=EN-US style='font-size:14.0pt;color:#0070C0'>* PhD/<span
-  class=SpellE>PostDoc</span>/RA positions are available for application. </span></p></td>
+          <p><span lang="EN-US" style="font-size:14.0pt;color:#0070C0">* PhD/<span class="SpellE">PostDoc</span>/RA positions are available for application. </span></p>
+          <p>&nbsp;</p></td>
       </tr>
       <tr>
         <td colspan=3><div align=center style='text-align:center'><span lang=EN-US
