--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ span.FooterChar {
             <br>
             </span></u></span></p></td>
         <td width=63>&nbsp;</td>
-        <td><p><span lang=EN-US><img width=312 height=356
-  src="JP21.jpg" align=right></span></p></td>
+        <td><p><span lang=EN-US><a href="https://cmpun.github.io/" target="_self"><img width="312" height="356" src="JP21.jpg" align="right"></a></span></p></td>
       </tr>
       <tr>
         <td colspan=3><div align=center style='text-align:center'><span lang=EN-US
