--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ span.FooterChar {
             and the General Co-Chair for the IEEE International Conference on Visual
             Communications and Image Processing (<a href="http://www.vcip2020.org/">VCIP2020</a>) and the International Workshop on Advanced Image Technology (<a href="https://iwait.online/">IWAIT2022</a>),
             and the Program/Local Chair for several other international conferences. He has also served as the SPC/PC member for many top CS conferences such as AAAI, CVPR, ICCV, etc. His research
-            interests include Image Processing and Pattern Recognition; Information
-            Security and Forensic for Multimedia; Adversarial Machine Learning and AI Security,
+            interests include Image Processing and Pattern Recognition; Multimedia Information
+            Security, Forensic and Privacy; Adversarial Machine Learning and AI Security,
             etc. He is also a senior member of the IEEE.</span></p>
           <p style='text-align:justify;text-justify:inter-ideograph'><span lang=EN-US
   style='font-size:14.0pt'>On-going research projects and selected publications
