--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@ span.staffsectionsubheading1 {
 </head>
 
 <body bgcolor=white lang=ZH-TW link=blue vlink=purple>
-<div class=WordSection1>
+<div>
   <div align=center>
     <table border=0 cellspacing=4 cellpadding=0 width=928>
       <tr>
@@ -151,8 +151,7 @@ span.staffsectionsubheading1 {
             <hr size=1 width="100%" align=center>
             </span></div>
           <p style='text-align:justify;text-justify:inter-ideograph'><a name=research><span
-  lang=EN-US style='font-size:14.0pt;color:#000099'>Research</span></a><span
-  lang=EN-US style='font-size:14.0pt;color:#000099'> Projects with External
+  lang=EN-US style='font-size:14.0pt;color:#000099'>Research Projects with External
             Grants</span></p>
           <ol start=1 type=1>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><b><span lang=EN-US style='"Times New Roman"'>Research on Privacy-sensitive Objects <span
@@ -223,6 +222,12 @@ span.staffsectionsubheading1 {
           <p style='text-align:justify;text-justify:inter-ideograph'><b><span
   lang=EN-US style='font-size:14.0pt'>Journals </span></b></p>
           <ol start=1 type=1>
+			  
+			  <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>X. Du </span></strong><span
+       lang=EN-US style='"Times New Roman"'>and<strong><span
+       style='font-weight:normal'> </span>C.-M. Pun</strong>, "Robust Audio Patch Attacks Using Physical Sample Simulation and Adversarial Patch Noise Generation," <i>IEEE Transactions on
+              Multimedia (TMM)</i><strong><span style='font-weight:normal'>,
+              In Press, 2021. (JCR Q1, CCF B)</span></strong></span></li>
 			  
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman";font-weight:normal'>G. Dong,</span></strong><span
        lang=EN-US style='"Times New Roman"'> <strong>C.-M.
@@ -1193,7 +1198,7 @@ span.staffsectionsubheading1 {
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>X.-C. Yuan and <b>C.-M. Pun</b>, "Feature Based Video
               Watermarking Resistant to Geometric Distortions," <i>Proceedings of the
               12th IEEE International Conference on Trust, Security and Privacy in
-              Computing and Communications (<span class=SpellE><span class=spelle>TrustCom</span></span>),</i> 2013. (CCF C)</span></li>
+              Computing and Communications (<span class=SpellE><span class=spelle>TrustCom</span></span>),</i> 2013.</span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>Z. Tan, L. Wan, W. Feng, and <b>C.-M. Pun</b>, "Image
               Co-Saliency Detection <span class=GramE><span class=grame>By</span></span> Propagating Superpixel Affinities," <i>Proceedings of the 38th IEEE
               International Conference on Acoustics, Speech, and Signal Processing
@@ -1223,14 +1228,14 @@ span.staffsectionsubheading1 {
               Feature Points Detector and Histogram Distribution,&quot; <i>Proceedings
               of the 10th IEEE International Conference on Trust, Security and Privacy
               in Computing and Communications (<span class=SpellE><span class=spelle>TrustCom</span></span>)</i>,
-              2011. (CCF C)</span></li>
+              2011.</span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman"'>C.-M. Pun, </span></strong><span lang=EN-US
        style='"Times New Roman"'>J.-J. <span
        class=GramE><span class=grame>Jiang</span></span> and Philip C. L. Chen,
               &quot; Adaptive Client-Side LUT-Based Digital Watermarking,&quot; <i>Proceedings
               of the 10th IEEE International Conference on Trust, Security and Privacy
               in Computing and Communications (<span class=SpellE><span class=spelle>TrustCom</span></span>)</i>,
-              2011. (CCF C)</span></li>
+              2011.</span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><span lang=EN-US style='"Times New Roman"'>W.-L. Chan and <strong>C.-M. Pun</strong>,&quot;
               Robust Character Recognition Using Connected-Component Extraction,"
               Proceedings<strong><i><span style='font-weight:normal'> of </span></i></strong><i>the
@@ -1278,7 +1283,7 @@ span.staffsectionsubheading1 {
               "Robust Block and Gray-Level Histogram Based Watermarking <span
        class=GramE><span class=grame>Scheme ,</span></span>" <em>Proceedings of
               the </em><i>10th Pacific Rim Conference on Multimedia (PCM), </i>2009.
-              (CCF C)</span></li>
+              </span></li>
             <li style='text-align:justify;text-justify:inter-ideograph;       '><strong><span lang=EN-US style='"Times New Roman"'>C.-M. Pun </span></strong><span lang=EN-US
        style='"Times New Roman"'>and C.-F. <span
        class=GramE><span class=grame>Wong ,</span></span>&quot;Image Retrieval
