--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <title>Prof. Chi Man Pun, University of Macau</title>
+<link rel="icon" href="JP21.jpg">
 <style>
 <!--
 p.MsoHeader, li.MsoHeader, div.MsoHeader {
