--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@ span.FooterChar {
             Software Engineering from the <a href="https://www.um.edu.mo/" target="_self">University
             of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
             Engineering</a> from the <a href="https://www.cuhk.edu.hk/" target="_self">Chinese
-            University of Hong Kong</a> in 2002. He was the Head of the <a href="https://www.cis.umac.mo" target="_self">Department of Computer and
-            Information Science</a> from 2014 to 2019. Dr. Pun is currently a Professor
-            of Computer and Information Science and in charge of the Image Processing and
-            Pattern Recognition Laboratory at the Faculty of Science and Technology of
-            the University of Macau. He has investigated many externally funded research
-            projects as PI, and has authored/co-authored more than 200 refereed papers in
+            University of Hong Kong</a> in 2002. He had served as the Head of the <a href="https://www.cis.umac.mo" target="_self">Department of Computer and
+            Information Science</a> from 2014 to 2019, where he is currently a Professor
+             and in charge of the Image Processing and
+            Pattern Recognition Laboratoy. He has investigated many externally funded research
+            projects as PI, and has authored/co-authored more than 200 refereed papers in many
             top-tier journals (including T-PAMI, T-IFS, T-IP, T-DSC, and T-KDE) and
             conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
             as the General Chair for the 10th &amp;11th International Conference Computer
