--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ span.FooterChar {
             University of Hong Kong</a> in 2002. He had served as the Head of the <a href="https://www.cis.umac.mo" target="_self">Department of Computer and
             Information Science</a> from 2014 to 2019, where he is currently a Professor
              and in charge of the Image Processing and
-            Pattern Recognition Laboratoy. He has investigated many externally funded research
+            Pattern Recognition Laboratory. He has investigated many externally funded research
             projects as PI, and has authored/co-authored more than 200 refereed papers in many
             top-tier journals (including T-PAMI, T-IFS, T-IP, T-DSC, and T-KDE) and
             conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
