--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ span.FooterChar {
             Software Engineering from the <a href="https://www.um.edu.mo/" target="_self">University
             of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
             Engineering</a> from the <a href="https://www.cuhk.edu.hk/" target="_self">Chinese
-            University of Hong Kong</a> in 2002. He had served as the Head of the <a href="https://www.cis.umac.mo" target="_self">Department of Computer and
+            University of Hong Kong</a> in 2002. He had served as the Head of the <a href="https://www.cis.um.edu.mo" target="_self">Department of Computer and
             Information Science</a> from 2014 to 2019, where he is currently a Professor
              and in charge of the Image Processing and
             Pattern Recognition Laboratory. He has investigated many externally funded research
