--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ span.FooterChar {
             of Macau</a> in 1995 and 1998 respectively, and Ph.D. degree in <a href="https://www.cse.cuhk.edu.hk/" target="_self">Computer Science and
             Engineering</a> from the <a href="https://www.cuhk.edu.hk/" target="_self">Chinese
             University of Hong Kong</a> in 2002. He had served as the Head of the <a href="https://www.cis.um.edu.mo" target="_self">Department of Computer and
-            Information Science</a> from 2014 to 2019, where he is currently a Professor
+            Information Science</a>, University of Macau from 2014 to 2019, where he is currently a Professor
              and in charge of the Image Processing and
             Pattern Recognition Laboratory. He has investigated many externally funded research
             projects as PI, and has authored/co-authored more than 200 refereed papers in many
             top-tier journals (including T-PAMI, T-IFS, T-IP, T-DSC, and T-KDE) and
-            conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). Dr. Pun has served
+            conferences (including ACM MM, ECCV, AAAI, ICDE, and VR). He also has two US Patents granted and is the recipient of the Macao Science and Technology Award 2014. Dr. Pun has served
             as the General Chair for the 10th &amp;11th International Conference Computer
             Graphics, Imaging and Visualization (<a href="https://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>, <a href="https://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>), the 13th IEEE
             International Conference on e-Business Engineering (<a href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>),
