--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ span.FooterChar {
             International Conference on e-Business Engineering (<a href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>),
             and the General Co-Chair for the IEEE International Conference on Visual
             Communications and Image Processing (<a href="http://www.vcip2020.org/">VCIP2020</a>) and the International Workshop on Advanced Image Technology (<a href="https://iwait.online/">IWAIT2022</a>),
-            and the Program/Local Chair for several other international conferences. He has also served as the SPC/PC member for many top CS conferences such as AAAI, CVPR, ICCV, etc. His research
+            and the Program/Local Chair for several other international conferences. He has also served as the SPC/PC member for many top CS conferences such as AAAI, CVPR, ICCV, ECCV, etc. His research
             interests include Image Processing and Pattern Recognition; Multimedia Information
             Security, Forensic and Privacy; Adversarial Machine Learning and AI Security,
             etc. He is also a senior member of the IEEE.</span></p>
