--- a/research.html
+++ b/research.html
@@ -2,6 +2,8 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 <title>Prof. Chi Man Pun, University of Macau</title>
+<link rel="icon" href="JP21.jpg">	
+	
 <style>
 
 
