--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
           <p style='text-align:justify;text-justify:inter-ideograph'><span lang=EN-US
   style='font-size:14.0pt'>On-going research projects and selected publications
-            can be found <a href="research.html"><span style='font-size:12.0pt'>HERE</span></a>.</span></p>
+            can be found <a href="research.html">Here</a>.</span></p>
           
 			<p><span lang=EN-US style='font-size:14.0pt'>More publications can be found
             in his <a href="https://scholar.google.com/citations?user=JTkP_EAAAAAJ">Google
