--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
   style='font-size:10.0pt;'>
             <hr size=1 width="100%" align=center>
             </span></div>
-          <p align=right style='text-align:right'><a href="https://www.fst.um.edu.mo/"
-  target="&quot;_blank&quot;"><img border=0 width=50 height=58
-  src="FST%20Logo.jpg" align=right title="" v:shapes="Picture_x0020_2"></a><a href="https://www.um.edu.mo/"
-  target="&quot;_blank&quot;"><img border=0 width=234 height=60
-  src="UM_logo.gif" align=right title="" v:shapes="Picture_x0020_3"></a></p></td>
+          <p align=right style='text-align:right'><a href="https://www.cis.um.edu.mo/"
+  target="&quot;_blank&quot;"><img border=0 width=230 height=38
+  src="cis_logo.png" align=right ></a><a href="https://www.um.edu.mo/"
+  target="&quot;_blank&quot;"><img border=0 width=150 height=38
+  src="um_logo.png" align=right  ></a></p></td>
       </tr>
     </table>
   </div>
